--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
 <div id="viewport">
 <div class="wrapper">
-<div id="body">
+<div class="page-wrapper">
+<div id="resume" class="page">
 <body>
   <header id="header">
-  <h1 class="name">Ira Rock</h1>
+  <h1 class="name">Ira Rock</h1><a href="#comment1"></a><span id="comment1-return"></span>
   <div class="center-header"> <!--Probably throw in an appropriate div with JS-->
   <span class="street-address">552 N. Heatherlane Place &#9679;</span> <!--Will also need to add in the bullet point using JS-->
   <span class="city-state-zip">Fayetteville, AR 72701 &#9679;</span>
@@ -23,13 +24,13 @@
 
 <article>
 <section id="summary">
-  <h2 class="underline">Summary of Qualifications</h2>
+  <h2 class="underline">Summary of Qualifications</h2><a href="#comment2"></a><span id="comment2-return">
   <p>Combined 4 years of customer service, sales, and leadership experience. Strengths include
 </p>
   <ul>
-    <li>Superior Customer Service & Communication Skills – 99% positive feedback from customer satisfaction surveys in jobs heavily reliant on written and verbal communication</li>
-    <li>Ability to Increase Revenue & Partnerships – Improved sales for up to 50% of customer orders and increased sponsorship partners for a non-profit event</li>
-    <li>Strong Interpersonal Skills, Working in Diverse Teams – Experience working diverse groups of students, particularly with regard to socioeconomic background</li>
+    <li>Superior Customer Service & Communication Skills<a href="#comment3"></a><span id="comment3-return"> – 99% positive feedback from customer satisfaction surveys in jobs heavily reliant on written and verbal communication</li><a href="#comment4"></a><span id="comment4-return">
+    <li>Ability to Increase Revenue & Partnerships <a href="#comment5"></a><span id="comment5-return">– Improved sales for up to 50% of customer orders and increased sponsorship partners for a non-profit event</li><a href="#comment6"></a><span id="comment6-return">
+    <li>Strong Interpersonal Skills, Working in Diverse Teams <a href="#comment7"></a><span id="comment7-return">– Experience working diverse groups of students, particularly with regard to socioeconomic background</li>
   </ul>
 </section>
 
@@ -54,7 +55,7 @@
     <p class="cert-date right">Certificate April 20xx</p>
   </header>
     <ul>
-      <li class="description">Completed a professional development program consisting of 7 competencies, including professionalism, oral/written communication, and career management </li>
+      <li class="description">Completed a professional development program consisting of 7 competencies, including professionalism, oral/written communication, and career management </li><a href="#comment8"></a><span id="comment8-return">
     </ul>
   </section>
 
@@ -77,10 +78,10 @@
     <br>
     <p>St. Charles Bar and Grill, Fayetteville, AR</p>
     <ul>
-      <li>Work 20 hours/week while maintaining a 3.7 GPA</li>
-      <li>Demonstrate ability to problem solve by increasing overall profits and upgrading 50% of customer orders with appetizers and/or desserts</li>
+      <li>Work 20 hours/week while maintaining a 3.7 GPA</li><a href="#comment9"></a><span id="comment9-return">
+      <li>Demonstrate ability to problem solve<a href="#comment10"></a><span id="comment10-return"> by increasing overall profits and upgrading 50% of customer orders with appetizers and/or desserts</li>
       <li>Receive 99% positive feedback from customer satisfaction surveys</li>
-      <li>Displayed attention to detail by reconciling a $500-$3,000 cash drawer with 100% accuracy</li>
+      <li>Displayed attention to detail by reconciling a $500-$3,000 cash drawer with 100% accuracy</li><a href="#comment11"></a><span id="comment11-return">
     </ul>
   </section>
 
@@ -92,7 +93,7 @@
     <p>Susan G. Komen, Fayetteville, AR</p>
   </header>
     <ul>
-      <li>Contacted potential event sponsors via phone and email, increasing sponsors by more than 25%, using Microsoft Word and Excel to keep track of confidential information</li>
+      <li>Contacted potential event sponsors via phone and email, increasing sponsors by more than 25%,<a href="#comment12"></a><span id="comment12-return"> using Microsoft Word and Excel to keep track of confidential information</li>
       <li>Raised more than $1,500 by actively promoting event t-shirts on campus</li>
     </ul>
   </section>
@@ -108,7 +109,7 @@
     <p>Intramural Soccer, University of Arkansas</p>
   </header>
     <ul>
-      <li>Organized 3 team events, planning food, transportation, & event venue within a $400 budget</li>
+      <li>Organized 3 team events, planning food, transportation, & event venue<a href="#comment13"></a><span id="comment13-return"> within a $400 budget</li>
     </ul>
   </section>
 
@@ -121,13 +122,13 @@
   </header>
     <ul>
       <li>Greet and lead campus tours 3 times a week for prospective students and their families</li>
-      <li>Relate effectively to a diverse group of students and families from across the U.S. and around the world, tailoring conversations, presentations, and tours to their specific interests or needs</li>
+      <li>Relate effectively to a diverse group of students and families from across the U.S. and around the world, tailoring conversations, presentations, and tours to their specific interests or needs</li><a href="#comment14"></a><span id="comment14-return">
     </ul>
   </section>
 
   <section>
     <header class="experience-header">
-    <h3>Marketing Plan Team Leader – Marketing Foundations Course</h3>
+    <h3>Marketing Plan Team Leader – Marketing Foundations Course</h3><a href="#comment15"></a><span id="comment15-return">
     <p class="right">August – December 20xx</p>
     <br>
     <p>A+ Business, University of Arkansas</p>
@@ -139,57 +140,109 @@
 </section>
 </article>
 </body>
-</div> <!--end body div-->
+</div> <!--end resume div-->
+
+<div id="job-description" class="page">
+<h1 class="job-description-title">Membership Connector</h1><a href="#comment16"></a><span id="comment16-return">
+<h2 class="job-description-employer space-bottom">Non-Profit Organization; New Orleans, LA</h2>
+<p class="space-bottom">Consistent with the mission and vision of the Non-Profit Organization of New Orleans (NPONO), and in cooperation with other NPONO staff, under
+  the direction of the Membership Leadership Staff, the Membership Connector is responsible for increasing the growth of membership and revenue
+  while creating a culture of outstanding customer service.</p>
+<h3 class="space-bottom">Essential Functions:</h3><a href="#comment17"></a><span id="comment17-return">
+<ul>
+  <li>Model the NPONO core values: Caring, Honesty, Respect and Professionalism</li>
+  <li>Engage in active listening with members and problem solve to develop sustainable relationships, determine individual goals and interests</li>
+  <li>Greet, interview and lead tours for potential future members</li>
+  <li>Place outbound calls and send emails to increase number of tours given to potential future members</li>
+  <li>Follow up on membership inquiries</li>
+  <li>Record and track required information on tours with strong attention to detail</li>
+  <li>Connect members to specific programs and services; process program registration with the intent to increase member utilization of services
+     and programs offered</li>
+  <li>Manage budget for membership drive and Annual Giving Campaign</li>
+  <li>Implement, distribute, and communicate all membership marketing campaigns and sales-related promotions</li>
+  <li>Assist in planning annual center and association member appreciation and recognition events and programs</li>
+  <li class="space-bottom">Attend staff meetings and training sessions</li>
+</ul>
+<h3 class="space-bottom">Minimum Requirements:</h3><a href="#comment18"></a><span id="comment18-return">
+<p>An enthusiastic personality with the desire to serve members, volunteers, guests, participants and staff to create a professional culture of
+  service within our centers. Strong interpersonal and communication skills and the ability to relate effectively to diverse groups of people
+  from all social and economic segments of the community</p>
+  <ul>
+    <li>Bachelor’s degree or equivalent required</li>
+    <li>Previous sales experience preferred</li>
+    <li>Must be highly organized with the ability to work as part of team</li>
+    <li>Strong computer skills (Microsoft Office and internet usage)</li>
+    <li class="space-bottom">Ability to work a flexible schedule, including evenings and weekends</li>
+  </ul>
+<h3 class="space-bottom">Certifications Required:</h3><a href="#comment19"></a><span id="comment19-return">
+<ul>
+  <li>Within two weeks of hire: Basic Life Support, First Aid, and Emergency Oxygen</li>
+  <li>Within two weeks of hire: Membership Software training</li>
+</ul>
+</div> <!--end job description div-->
+</div> <!--end page wrapper div-->
 
 <div id="comments">
 <aside>
-  <div class="comment">
-    <p>See the job description on the 2nd page to see how we tailored this resume to a specific job posting. The resume is tailored all the way through, but we'll only highlight a few instances.</p>
+  <div class="comment" id="comment1">
+    <p>See the job description on the 2nd page to see how we tailored this resume to a specific job posting. The resume is tailored all the way through, but we'll only highlight a few instances.</p><a href="#comment1-return"></a>
   </div>
-  <div class="comment">
-    <p>One place to tailor your resume is in the Summary of Qualifications (also called a Skills Summary or Profile). Since it's the first thing an employer reads in the resume, pick out the 3-4 most important things you want the employer to know about you and your background, particularly as they relate to the skills valued by the employer. Think of this as your thesis statement; you're introducing the most important concepts that you'll elaborate on later.</p>
+  <div class="comment" id="comment2">
+    <p>One place to tailor your resume is in the Summary of Qualifications (also called a Skills Summary or Profile). Since it's the first thing an employer reads in the resume, pick out the 3-4 most important things you want the employer to know about you and your background, particularly as they relate to the skills valued by the employer. Think of this as your thesis statement; you're introducing the most important concepts that you'll elaborate on later.</p><a href="#comment2-return"></a>
   </div>
-  <div class="comment">
-    <p>Customer service and communication skills are two of the skills most often mentioned in the job description below. Since these are important to the employer, we want to call attention to them at the beginning. We'll do the same thing with other important or highly relevant skills/strengths we can bring to the organization.</p>
+  <div class="comment" id="comment3">
+    <p>Customer service and communication skills are two of the skills most often mentioned in the job description below. Since these are important to the employer, we want to call attention to them at the beginning. We'll do the same thing with other important or highly relevant skills/strengths we can bring to the organization.</p><a href="#comment3-return"></a>
   </div>
-  <div class="comment">
-    <p>Don't just tell the reader that you're strong in certain areas. Explain why they're true.</p>
+  <div class="comment" id="comment4">
+    <p>Don't just tell the reader that you're strong in certain areas. Explain why they're true.</p><a href="#comment4-return"></a>
   </div>
-  <div class="comment">
-    <p>Increasing and driving membership/sales traffic is mentioned a few times in the job description below. Show ways that you've done comparable things in previous experiences.</p>
+  <div class="comment" id="comment5">
+    <p>Increasing and driving membership/sales traffic is mentioned a few times in the job description below. Show ways that you've done comparable things in previous experiences.</p><a href="#comment5-return"></a>
   </div>
-  <div class="comment">
-    <p>Since we're applying to a non-profit organization, we want to highlight the fact that we have experience working in a non-profit setting.</p>
+  <div class="comment" id="comment6">
+    <p>Since we're applying to a non-profit organization, we want to highlight the fact that we have experience working in a non-profit setting.</p><a href="#comment6-return"></a>
   </div>
-  <div class="comment">
-    <p>This is another major component of the job description that we have experience with and should mention early on.</p>
+  <div class="comment" id="comment7">
+    <p>This is another major component of the job description that we have experience with and should mention early on.</p><a href="#comment7-return"></a>
   </div>
-  <div class="comment">
-    <p>In this case, rather than list all competencies or skills learned, we're only going to highlight those that are particularly relevant to the position, like professionalism and communication.</p>
+  <div class="comment" id="comment8">
+    <p>In this case, rather than list all competencies or skills learned, we're only going to highlight those that are particularly relevant to the position, like professionalism and communication.</p><a href="#comment8-return"></a>
   </div>
-  <div class="comment">
-    <p>We can't assume employers will make connections within our resume. State outright the fact that you were working while in school. It shows traits beyond the work itself, such as adaptability, organization, and work ethic. If you don't want to draw attention to your GPA, you could phrase this as, "Work 20/hours a week while a full-time student"</p>
+  <div class="comment" id="comment9">
+    <p>We can't assume employers will make connections within our resume. State outright the fact that you were working while in school. It shows traits beyond the work itself, such as adaptability, organization, and work ethic. If you don't want to draw attention to your GPA, you could phrase this as, "Work 20/hours a week while a full-time student"</p><a href="#comment9-return"></a>
   </div>
-  <div class="comment">
-    <p>Rather than solely talking about what you've accomplished or achieved, mention what skills you gained from it, especially if it's relevant to the job description (as this one is).</p>
+  <div class="comment" id="comment10">
+    <p>Rather than solely talking about what you've accomplished or achieved, mention what skills you gained from it, especially if it's relevant to the job description (as this one is).</p><a href="#comment10-return"></a>
   </div>
-  <div class="comment">
-    <p>Use numbers and percentages to make your point. Doing so shows attention to detail as well as quantifies your experience; supervising a class of 6-year-olds is different than supervising a class of 13-year-olds. Also, including numbers is a marketing tool because numbers stand out from text. Subconsciously our eyes are drawn to things that are different; incorporating numbers helps keep the reader's attention.</p>
+  <div class="comment" id="comment11">
+    <p>Use numbers and percentages to make your point. Doing so shows attention to detail as well as quantifies your experience; supervising a class of 6-year-olds is different than supervising a class of 13-year-olds. Also, including numbers is a marketing tool because numbers stand out from text. Subconsciously our eyes are drawn to things that are different; incorporating numbers helps keep the reader's attention.</p><a href="#comment11-return"></a>
   </div>
-  <div class="comment">
-    <p>We already mentioned in the Summary that we have experience increasing sponsorship partners. Now we can into more detail to explain what we accomplished and what it contributed to the organization.</p>
+  <div class="comment" id="comment12">
+    <p>We already mentioned in the Summary that we have experience increasing sponsorship partners. Now we can into more detail to explain what we accomplished and what it contributed to the organization.</p><a href="#comment12-return"></a>
   </div>
-  <div class="comment">
-    <p>Since the job description mentions planning events, we want to draw attention to similar experience. However, "organized" is very broad; be specific about what this entailed: transportation, entertainment, volunteers, venue logistics, food, etc.</p>
+  <div class="comment" id="comment13">
+    <p>Since the job description mentions planning events, we want to draw attention to similar experience. However, "organized" is very broad; be specific about what this entailed: transportation, entertainment, volunteers, venue logistics, food, etc.</p><a href="#comment13-return"></a>
   </div>
-  <div class="comment">
-    <p>Again, even though we introduced this strength in the Summary, we want to go into more detail in the body of the resume. Include info about how you accomplished a task or why it was important.</p>
+  <div class="comment" id="comment14">
+    <p>Again, even though we introduced this strength in the Summary, we want to go into more detail in the body of the resume. Include info about how you accomplished a task or why it was important.</p><a href="#comment14-return"></a>
   </div>
-  <div class="comment">
-    <p>The job description talks about working with a marketing team, so we want to show familiarity with this area, even if it wouldn't be a big part of the job for which we're applying.</p>
+  <div class="comment" id="comment15">
+    <p>The job description talks about working with a marketing team, so we want to show familiarity with this area, even if it wouldn't be a big part of the job for which we're applying.</p><a href="#comment15-return"></a>
+  </div>
+  <div class="comment" id="comment16">
+    <p>This job description is based in large part on an actual job posting from a large non-profit organization. Names and most identifying characteristics have been changed, but the content and requirements remain almost verbatim from the original posting.</p><a href="#comment16-return"></a>
+  </div>
+  <div class="comment" id="comment17">
+    <p>It won't always be possible to answer everything in a job description, either because you don't have enough room in your resume or - more likely - you won't have experience in every single area. Pick areas where you can highlight the experience you have and focus on those.</p><a href="#comment17-return"></a>
+  </div>
+  <div class="comment" id="comment18">
+    <p>Meeting the minimum (and/or preferred qualifications) is important, but don't just focus on these. Make sure you're answering all parts of the job description, including essential functions, certifications, daily tasks, job responsibilities, etc.</p><a href="#comment18-return"></a>
+  </div>
+  <div class="comment" id="comment19">
+    <p>If the person in this example already had any of these certifications, they would add them to the resume.</p><a href="#comment19-return"></a>
   </div>
 </aside>
 </div> <!--end comments div-->
-</div>
+</div> <!--end wrapper div-->
 </div> <!--end viewport div-->
 </html>
