--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <div id="comments">
 <aside>
   <div class="comment" id="comment1">
-    <p>See the job description on the 2nd page to see how we tailored this resume to a specific job posting. The resume is tailored all the way through, but we'll only highlight a few instances.</p><a href="#comment1-return"></a>
+    <p>See the job description on the 2nd page to see how we tailored this resume to a specific job posting. <span class="hideShow">The resume is tailored all the way through, but we'll only highlight a few instances.</span></p><button type="button" id="comment1Toggle" class="hideShowToggle">Read More</button><a href="#comment1-return"></a>
   </div>
   <div class="comment" id="comment2">
     <p>One place to tailor your resume is in the Summary of Qualifications (also called a Skills Summary or Profile). Since it's the first thing an employer reads in the resume, pick out the 3-4 most important things you want the employer to know about you and your background, particularly as they relate to the skills valued by the employer. Think of this as your thesis statement; you're introducing the most important concepts that you'll elaborate on later.</p><a href="#comment2-return"></a>
@@ -242,6 +242,8 @@
     <p>If the person in this example already had any of these certifications, they would add them to the resume.</p><a href="#comment19-return"></a>
   </div>
 </aside>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="main.js"></script>
 </div> <!--end comments div-->
 </div> <!--end wrapper div-->
 </div> <!--end viewport div-->
